[tool.poetry]
name = "tempeture-generator"
version = "0.1.0"
description = "Genearator of data tempeture from sensor in area"
authors = ["Artem Eroshev"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-APScheduler = "^1.12.3"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
